# snott

./: Cargo.toml  LICENSE  README.md
src/: app.rs  autocomplete_popup.rs  custom_window.rs  lib.rs  main.rs  main.rs.bak  quick_snote.rs  quick_snote_main.rs  snote.rs  snote_formatter.rs  snote_hightlighter.rs  snote_parser.rs  snotter_main.rs
src/snote/: mod.rs  snote.rs  snote_hightlighter.rs  snote_parser.rs
