[package]
name = "snote2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
eframe = "0.18"
rfd = "0.8"
chrono = "0.4"
dirs = "4.0"

[[bin]]
name = "snotter"
path = "src/snotter_main.rs"

[[bin]]
name = "quick-snote"
path = "src/quick_snote_main.rs"
